<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Scma</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="label_app_settings">Application Settings</string>
    <string name="label_log_level">Log level</string>
    <string name="wait_loading">Please wait &#8230;</string>
    
    <string name="imageViewDescription">Image viewer component</string>
    <string name="logoDescription">Logo image</string>
   
    <string name="poweron_label">Turn off</string>
    <string name="poweroff_label">Turn on</string>
    <string name="zero_text">0.00</string>
    <string name="storageBtn_label">CLICK</string>
    <string name="mn_config_label">Settings</string>
    <string name="mn_reset_label">Reset config</string>
    <string name="pw_red_label">Red pulse width (#)</string>
    <string name="pw_green_label">Green pulse width (#)</string>
    <string name="pw_blue_label">Blue pulse width (#)</string>
    <string name="pw_yellow_label">Yellow pulse width (#)</string>
    <string name="pw_nir_label">NIR pulse width (#)</string>
    <string name="pw_white_label">White pulse width (#)</string>
    <string name="pw_focus_label">Focus pulse width (#)</string>
    <string name="led_default_pwm">1000</string>
    <string name="led_powers_label">Led PWM values</string>
    
    <string name="channel_white_conf_key">CONF_CHANNEL_WHITE</string>
    <string name="focusbtn_label">Focus</string>
    <string name="mn_scma_label">Settings</string>
    <string name="mn_about_label">About&#8230;</string>
    <string name="mn_changelog_label">Change Log</string>
    <string name="mn_resetioio_label">Reset IOIO</string>
    <string name="mn_copyassets_label">Copy Ass.</string>
    <string name="text_copyright">"&#169; All rights reserved by Tommi Rintala (softanalle@gmail.com) GPL 2.0 "</string>
    <string name="conf_filemode_label">Image format</string>
    <string name="conf_writejpeg_label">JPEG</string>
    <string name="conf_writeraw_label">RAW</string>
    <string name="conf_focuscolor_label">Focus color to use</string>
    <string name="mn_calibrate_label">Calibrate</string>
    <string name="btn_close_label">Close</string>
    <string name="btn_accept_label">Accept image</string>
    <string name="btn_reset_label">Reset</string>
    <string name="conf_defaultpwm_label">LED default PWM value</string>
    <string name="conf_ledpwm_label">Led PWM value</string>

    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more &#8230;</string>
</resources>
