<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" ><PreferenceCategory
        android:order="100"
        android:title="@string/label_app_settings" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="conf_write_raw"
            android:order="1"
            android:summaryOff="Don&apos;t save RAW image info"
            android:summaryOn="Save RAW image into JPEG envelope"
            android:title="@string/conf_writeraw_label" >
        </CheckBoxPreference>
        <ListPreference android:key="conf_log_level" android:entryValues="@array/loglevels" android:defaultValue="DEBUG" android:order="10" android:entries="@array/loglevels" android:title="@string/label_log_level"/>
    </PreferenceCategory>
<PreferenceCategory 
        android:title="@string/led_powers_label" 
        android:order="200">
        <EditTextPreference 
            android:title="@string/pw_red_label" 
            android:defaultValue="@string/pref_pulsewidth_default" 
            android:key="conf_red_pwm" 
            android:enabled="true" 
            android:order="210"
            android:inputType="number"            
            android:lines="1"
            android:maxLength="4"
            android:maxLines="1"
            android:singleLine="true" 
            android:summary="@string/conf_ledpwm_label"/>
        
        <EditTextPreference 
            android:title="@string/pw_green_label" 
            android:defaultValue="@string/pref_pulsewidth_default" 
            android:key="conf_green_pwm" 
            android:enabled="true" 
            android:order="220" 
            android:inputType="number"
            android:lines="1"
            android:maxLength="4"
            android:maxLines="1"
            android:singleLine="true" 
            android:summary="@string/conf_ledpwm_label"/>
        <EditTextPreference 
            android:title="@string/pw_blue_label" 
            android:defaultValue="@string/pref_pulsewidth_default" 
            android:key="conf_blue_pwm" 
            android:enabled="true" 
            android:order="230" 
            android:inputType="number"
            android:lines="1"
            android:maxLength="4"
            android:maxLines="1"
            android:singleLine="true" 
            android:summary="@string/conf_ledpwm_label"/>
        
        <EditTextPreference 
            android:title="@string/pw_yellow_label" 
            android:defaultValue="@string/pref_pulsewidth_default" 
            android:key="conf_yellow_pwm" 
            android:enabled="true" 
            android:order="240" 
            android:inputType="number"
            android:lines="1"
            android:maxLength="4"
            android:maxLines="1"
            android:singleLine="true" 
            android:summary="@string/conf_ledpwm_label"/>
        
        <EditTextPreference 
            android:title="@string/pw_white_label" 
            android:defaultValue="@string/pref_pulsewidth_default" 
            android:key="conf_white_pwm" 
            android:enabled="true" 
            android:order="250" 
            android:inputType="number"
            android:lines="1"
            android:maxLength="4"
            android:maxLines="1"
            android:singleLine="true" 
            android:summary="@string/conf_ledpwm_label"/>
        
        <EditTextPreference 
            android:title="@string/pw_nir_label" 
            android:defaultValue="@string/pref_pulsewidth_default" 
            android:key="conf_nir_pwm" 
            android:enabled="true" 
            android:order="260" 
            android:inputType="number"
            android:lines="1"
            android:maxLength="4"
            android:maxLines="1"
            android:singleLine="true" 
            android:summary="@string/conf_ledpwm_label"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/conf_focuscolor_label" android:order="300">
        <ListPreference 
            android:title="Focus color" 
            android:entries="@array/led_colors" 
            android:entryValues="@array/led_indexes" 
            android:key="conf_focusled_color" 
            android:enabled="true" 
            android:persistent="true" 
            android:summary="Seleted focus color" 
            android:order="310" 
            android:defaultValue="@string/pref_focusled_color"/>
        
        <EditTextPreference 
            android:title="@string/pw_focus_label" 
            android:defaultValue="@string/pref_pulsewidth_default" 
            android:key="conf_focus_pwm" 
            android:enabled="true" 
            android:inputType="number" 
            android:lines="1" 
            android:maxLength="4" 
            android:maxLines="1" 
            android:singleLine="true" 
            android:order="315" 
            android:summary="@string/conf_ledpwm_label" />
        
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="Image preview" 
        android:order="400">
        <ListPreference 
            android:key="conf_preview_scale" 
            android:title="Preview image scale factor" 
            android:entries="@array/scale_factor_labels" 
            android:entryValues="@array/scale_factors" 
            android:defaultValue="4" 
            android:order="410"/>
    </PreferenceCategory>
    

</PreferenceScreen>
